fixed bg on mobile version

--- a/ukbg/theme/static/bootstrap-3.3.5/less/navbar.less
+++ b/ukbg/theme/static/bootstrap-3.3.5/less/navbar.less
@@ -245,7 +245,6 @@
       float: none;
       width: auto;
       margin-top: 0;
-      background-color: transparent;
       border: 0;
       box-shadow: none;
       > li > a,
